...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/shape_textbox"
        android:orientation="horizontal">

        <androidx.pdf.widget.SearchEditText
            android:id="@+id/searchQueryBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textDirection="locale"
            android:layout_weight="1"
            android:background="@null"
...
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSurfaceVariant"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/matchStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/query_box"
            android:layout_gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="8dp"
...
