...

    <!-- Content description for close button in find in file menu -->
    <string name="close_button_description">Close</string>

    <!-- Message to show which match is selected out of how many matches when searching for query text inside the file.
      e.g. "3 of 12" meaning "match 3 is selected, out of 12 matches" [CHAR LIMIT=10] -->
    <string name="message_match_status"><xliff:g id="position" example="3">%1$d</xliff:g> / <xliff:g id="total" example="12">%2$d</xliff:g></string>

    <!-- Content description for the match status, indicating which match is selected out of the total number of matches
    when searching for a query text within the file. -->
    <string name="match_status_description"><xliff:g id="position" example="3">%1$d</xliff:g> of <xliff:g id="total" example="12">%2$d</xliff:g></string>

    <!-- Message to show when no matches occur when searching for query text inside the file -->
...
